Fix overflow on body when list is being displayed

--- a/src/components/ListContainer/ListContainer.module.scss
+++ b/src/components/ListContainer/ListContainer.module.scss
@@ -103,8 +103,11 @@
   }
 }
 
-.ListContainer--visible {
-  overflow:hidden;
+@media (max-width:40em) {
+  .ListContainer--visible {
+    overflow:hidden;
+  }
+  
 }
 
 .ListContainer__ask {
